# SinArraySum

./: CMakeLists.txt  Makefile  README.md  main.cpp
